<resources>
    <string name="app_title">Final Project</string>

    <string name="login">Enter</string>
    <string name="dont_have_account">I don\'t have an account yet</string>

    <string name="sign_up">Sign Up</string>
    <string name="have_account">I already have an account</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>

    <!--  logout page  -->
    <string name="logout_title">Logout</string>
    <string name="logout_description">Are you sure you want to logout?</string>
    <string name="logout_confirm">Confirm</string>
    <string name="logout_cancel">Cancel</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_welcome">Welcome</string>
    <string name="description_welcome">Register your places to walk and always find something new!</string>

    <string name="title_map">Map</string>
    <string name="title_list">List</string>
    <string name="title_about">About</string>
    <string name="title_config">Configuration</string>
    <string name="title_exit">Exit</string>

    <!-- generics -->
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_cancel">Cancel</string>

    <!-- maps page -->
    <string name="search_for_new_places">Search for new places!</string>
    <string name="txt_fill_address">Fill an address!</string>
    <string name="txt_address">Address</string>
    <string name="txt_search">Search</string>
    <string name="txt_reset">Reset</string>
    <string name="add_new_location">Add new location!</string>

    <!-- about page -->
    <string name="about_version">Version</string>
    <string name="about_copyright">All rights reserverd © 2021</string>
    <string name="about_by">Developed by</string>

    <!-- config lang page -->
    <string name="config_lang_label">Language</string>
    <string name="config_lang_confirmation">Do you want to change the language to "%1$s"?</string>
    <string name="config_lang_current">Current</string>

</resources>