<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.francisco.geovane.marcello.felipe.projetofinalandroid.main.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.francisco.geovane.marcello.felipe.projetofinalandroid.main.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.francisco.geovane.marcello.felipe.projetofinalandroid.main.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_config"
        android:name="com.francisco.geovane.marcello.felipe.projetofinalandroid.main.ui.config.ConfigFragment"
        android:label="@string/title_config"
        tools:layout="@layout/fragment_config" />

    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.francisco.geovane.marcello.felipe.projetofinalandroid.main.ui.logout.LogoutFragment"
        android:label="@string/title_exit"
        tools:layout="@layout/fragment_logout" />
</navigation>