<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:padding="16dp"
        android:text="@string/have_account"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>