<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".main.ui.map.MapFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        app:cardCornerRadius="3dp" >

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="-1dp">

        <EditText
            android:id="@+id/text_address"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:hint="@string/search_for_new_places"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/black"
            android:textColorHint="#8E8C8C"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:text="Av. Washington Luís, s/nº - Vila Congonhas, São Paulo - SP, 04626-911"/>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_search"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>


    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        app:cardCornerRadius="3dp"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:id="@+id/bottom_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/txt_reset"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/add_new_location"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>